# gnu-parallel

./: .gitignore  10seconds_install  CITATION  CREDITS  Makefile  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  parallel  parallel.1
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: FUTURE_IDEAS  boxplot-runtime  parallel.directive  pod2savannah_publicinfo  promo  release_new_version
packager/0install/: FE58602B58894ED2.gpg  check  interface.xsl  parallel.xml  update
packager/debian/: Makefile  README
packager/debian/debian-template/: changelog  control  copyright  doc-base  files  rules  watch
packager/debian/debian-template/patches/: 01-fix-spelling.patch  series
packager/debian/doc/: index.html
packager/obs/: Makefile  README
packager/obs/home:tange/parallel/: parallel.spec
packager/opensuse/: parallel.spec
src/: Makefile.am  Makefile.in  christmastree  load-parallel-results.r  niceload  niceload.pod  niceload.texi  parallel  parallel.1  parallel.pod  parallel.texi  parallel_design.pod  parallel_tutorial.1  parallel_tutorial.html  parallel_tutorial.pod  parallel~  sem  sem.pod  sem.texi  sql  sql.texi
src/optional/: genresults.sh
src/optional/R/: Makefile  load-parallel-results.r
src/optional/R/gnuparallel/: DESCRIPTION  MD5  NAMESPACE
src/optional/R/gnuparallel/R/: gnuparallel.R
src/optional/R/gnuparallel/man/: gnu.parallel.filenames.Rd  gnu.parallel.load.Rd  gnu.parallel.load.data.frame.Rd  gnu.parallel.load.data.table.Rd  gnu.parallel.load.lines.Rd  gnuparallel-package.Rd
src/optional/python/: README  setup.py
src/optional/python/gnuparallel/: __init__.py  _loader.py
src/optional/python/tests/: test_loader.py
src/optional/testresults/: bar_stdout	a	5	b	0.70  bar_stdout	a	6	b	0.70  foo_stdout	a	1	b	0.30  foo_stdout	a	1	b	0.40  foo_stdout	a	2	b	0.30  foo_stdout	a	2	b	0.40
src/optional/testresults/bar/a/5/b/0.80/: stdout
src/optional/testresults/bar/a/6/b/0.80/: stdout
testsuite/: Fixed.sh  Makefile  Portable.sh  Start.sh
testsuite/input-files/: testdir3.tar.bz2
testsuite/input-files/perl-v5.14.2/: perl
testsuite/input-files/perl-v5.14.2/lib/: Config.pm  Errno.pm
testsuite/input-files/perllib/: perl  perl32
testsuite/input-files/segfault/: trysegfault
testsuite/input-files/shebang/: shebangwrap.gp  shebangwrap.oct  shebangwrap.pl  shebangwrap.py  shebangwrap.r  shebangwrap.rb  shebangwrap.sh
testsuite/input-files/test08/: a  b
testsuite/input-files/testdir/: 2-col.txt
testsuite/tests-to-run/: niceload01.sh  niceload02.sh  niceload03.sh  niceload04.sh  parallel-freebsd.sh  parallel-install.sh  parallel-local-0.3s.sh  parallel-local-100s.sh  parallel-local-10s.sh  parallel-local-30s.sh  parallel-local-3s.sh  parallel-local-mem.sh  parallel-local-signals.sh  parallel-local-ssh1.sh  parallel-local-ssh2.sh  parallel-local-ssh3.sh  parallel-local-ssh4.sh  parallel-local-term-seq.sh  parallel-local-termination.sh  parallel-local1.sh  parallel-local10.sh  parallel-local105.sh  parallel-local106.sh  parallel-local11.sh  parallel-local114.sh  parallel-local12.sh  parallel-local120.sh  parallel-local13.sh  parallel-local139.sh  parallel-local14.sh  parallel-local144.sh  parallel-local15.sh  parallel-local150.sh  parallel-local152.sh  parallel-local154.sh  parallel-local16.sh  parallel-local164.sh  parallel-local17.sh  parallel-local18.sh  parallel-local19.sh  (+80 more)
testsuite/wanted-results/: niceload01  niceload02  niceload03  niceload04  parallel-freebsd  parallel-install  parallel-local-0.3s  parallel-local-100s  parallel-local-30s  parallel-local-3s  parallel-local-mem  parallel-local-ssh1  parallel-local-ssh2  parallel-local-ssh3  parallel-local-ssh4  parallel-local1  parallel-local104  parallel-local105  parallel-local108  parallel-local11  parallel-local114  parallel-local12  parallel-local129  parallel-local13  parallel-local139  parallel-local14  parallel-local140  parallel-local15  parallel-local150  parallel-local152  parallel-local154  parallel-local157  parallel-local164  parallel-local17  parallel-local18  parallel-local19  parallel-local2  parallel-local20  parallel-local21  parallel-local22  (+73 more)
unittest/: Makefile  Start.sh
unittest/actual-results/: test01  test02  test05  test06  test09  test10  test12  test14  test15  test16  test17  test18  test19  test21  test25
unittest/input-files/: random_dirs_no_newline.tar.bz2  random_dirs_with_newline.tar.bz2
unittest/input-files/segfault/: trysegfault
unittest/input-files/test08/: c  d
unittest/tests-to-run/: sem01.sh  sql01.sh  sql03.sh  test01.sh  test02.sh  test03.sh  test04.sh  test05.sh  test06.sh  test07.sh  test08.sh  test09.sh  test10.sh  test11.sh  test12.sh  test13.sh  test14.sh  test15.sh  test16.sh  test17.sh  test18.sh  test19.sh  test20.sh  test21.sh  test22.sh  test23.sh  test24.sh  test25.sh  test26.sh  test27.sh  test28.sh  test29.sh  test30.sh  test31.sh
unittest/wanted-results/: sem01  sql01  sql03  test01  test04  test05  test07  test10  test13  test14  test15  test16  test17  test18  test19  test21  test22  test23  test24  test25  test26  test27  test28  test29  test30  test31  test32
